[gd_scene load_steps=7 format=3 uid="uid://mwbv2jh1ugjq"]

[ext_resource type="Script" uid="uid://crli6jbg5fenn" path="res://src/ui/controls/controls.gd" id="1_ypuet"]
[ext_resource type="Script" uid="uid://dsa1dnifd6w32" path="res://addons/guide/guide_mapping_context.gd" id="2_v7gdq"]
[ext_resource type="Resource" uid="uid://v5u0dyabni7e" path="res://src/input/default_mapping_context.tres" id="3_b2afy"]
[ext_resource type="Script" uid="uid://cejoahrxsimnx" path="res://src/ui/controls/input_panel.gd" id="5_7bxk6"]
[ext_resource type="Script" uid="uid://db27ccgomq455" path="res://addons/guide/remapping/guide_input_detector.gd" id="5_64hdo"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qy0v7"]
bg_color = Color(0.162066, 0.162066, 0.162065, 1)

[node name="Controls" type="Control" node_paths=PackedStringArray("default_focus_control")]
texture_filter = 1
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ypuet")
remap_mapping_contexts = Array[ExtResource("2_v7gdq")]([ExtResource("3_b2afy")])
icon_size = 32
default_focus_control = NodePath("Buttons/Back")

[node name="BoxContainer" type="BoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -96.5
offset_top = -13.5
offset_right = 96.5
offset_bottom = 13.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 40
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="BoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0

[node name="Label" type="Label" parent="BoxContainer/VBoxContainer"]
layout_mode = 2
text = "Keyboard"
horizontal_alignment = 1

[node name="KeyboardMouseActions" type="GridContainer" parent="BoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 3
theme_override_constants/h_separation = 20
theme_override_constants/v_separation = 4
columns = 2

[node name="VBoxContainer2" type="VBoxContainer" parent="BoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0

[node name="Label" type="Label" parent="BoxContainer/VBoxContainer2"]
layout_mode = 2
text = "Controller"
horizontal_alignment = 1

[node name="ControllerActions" type="GridContainer" parent="BoxContainer/VBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 3
theme_override_constants/h_separation = 20
theme_override_constants/v_separation = 4
columns = 2

[node name="Buttons" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -32.0
offset_top = -22.0
offset_right = 32.0
offset_bottom = -4.0
grow_horizontal = 2
grow_vertical = 0
size_flags_horizontal = 4

[node name="Back" type="Button" parent="Buttons"]
unique_name_in_owner = true
layout_mode = 2
text = "Back"

[node name="InputPanel" type="PopupPanel" parent="."]
unique_name_in_owner = true
initial_position = 2
size = Vector2i(320, 160)
always_on_top = true
min_size = Vector2i(320, 160)
theme_override_styles/panel = SubResource("StyleBoxFlat_qy0v7")
script = ExtResource("5_7bxk6")

[node name="MarginContainer" type="MarginContainer" parent="InputPanel"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 320.0
offset_bottom = 160.0
grow_horizontal = 2
grow_vertical = 2

[node name="KeyboardMouseLabel" type="Label" parent="InputPanel/MarginContainer"]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(280, 0)
layout_mode = 2
size_flags_horizontal = 4
text = "Waiting for keyboard or mouse input"
horizontal_alignment = 1
autowrap_mode = 2

[node name="JoypadLabel" type="Label" parent="InputPanel/MarginContainer"]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
size_flags_horizontal = 4
text = "Waiting for controller input"
horizontal_alignment = 1
autowrap_mode = 2

[node name="GUIDEInputDetector" type="Node" parent="InputPanel"]
unique_name_in_owner = true
script = ExtResource("5_64hdo")
detection_countdown_seconds = 0.1
